# burn-severity-map

./: .env-example  .gitignore  README.md  docker-compose.yml  index.d.ts  package-lock.json
backend/: Dockerfile  README.md  example-data.geojson  example-data.json
backend/api/: .env-example  Dockerfile  README.md  database.py  main.py  models.py  old-main.py  pyproject.toml  schemas.py
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/src/: index.tsx  style.scss
frontend/src/components/: bcgov-components.tsx
frontend/src/components/ol-maps/: BasemapSelector.tsx  FireSelector.tsx  NBRCalculator.tsx  NBRToggle.css  NBRToggle.tsx  OLMap.tsx  SatelliteToggle.tsx  Selectors.scss  StacMetadataDisplay.tsx
frontend/src/pages/: LandingPage.scss  LandingPage.tsx  MapPage.scss  MapPage.tsx  NBRMap.scss  NBRMap.tsx
public/: index.html
src/: index.tsx
src/components/: map.tsx
src/pages/: LandingPage.tsx
src/utils/: mapUtils.ts
