[project]
name = "api-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.115.12",
    "geoalchemy2>=0.17.1",
    "geojson-pydantic>=2.0.0",
    "psycopg2-binary>=2.9.10",
    "pyproj>=3.7.1",
    "shapely>=2.1.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
